rtamt/parser/stl/python2/StlBoundedFutureParser.py
# Generated from StlBoundedFutureParser.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class StlBoundedFutureParser ( Parser ):

    grammarFileName = "StlBoundedFutureParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'-'", u"'+'", u"'*'", u"'/'", u"'('", 
                     u"')'", u"'{'", u"'}'", u"'['", u"']'", u"';'", u"':'", 
                     u"','", u"'.'", u"'@'", u"'abs'", u"'s'", u"'ms'", 
                     u"'us'", u"'ns'", u"'ps'", u"'topic'", u"'import'", 
                     u"'input'", u"'output'", u"'internal'", u"'const'", 
                     u"'real'", u"'float'", u"'long'", u"'complex'", u"'int'", 
                     u"'bool'", u"'assertion'", u"'specification'", u"'from'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'xor'", u"'rise'", u"'fall'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'oracle'", u"<INVALID>", 
                     u"'=='", u"'!=='", u"'>='", u"'<='", u"'>'", u"'<'", 
                     u"'='" ]

    symbolicNames = [ u"<INVALID>", u"MINUS", u"PLUS", u"TIMES", u"DIVIDE", 
                      u"LPAREN", u"RPAREN", u"LBRACE", u"RBRACE", u"LBRACK", 
                      u"RBRACK", u"SEMICOLON", u"COLON", u"COMMA", u"DOT", 
                      u"AT", u"ABS", u"SEC", u"MSEC", u"USEC", u"NSEC", 
                      u"PSEC", u"ROS_Topic", u"Import", u"Input", u"Output", 
                      u"Internal", u"Constant", u"DomainTypeReal", u"DomainTypeFloat", 
                      u"DomainTypeLong", u"DomainTypeComplex", u"DomainTypeInt", 
                      u"DomainTypeBool", u"Assertion", u"Specification", 
                      u"From", u"NotOperator", u"OrOperator", u"AndOperator", 
                      u"IffOperator", u"ImpliesOperator", u"XorOperator", 
                      u"RiseOperator", u"FallOperator", u"AlwaysOperator", 
                      u"EventuallyOperator", u"UntilOperator", u"HistoricallyOperator", 
                      u"OnceOperator", u"SinceOperator", u"NextOperator", 
                      u"OracleOperator", u"PreviousOperator", u"EqualOperator", 
                      u"NotEqualOperator", u"GreaterOrEqualOperator", u"LesserOrEqualOperator", 
                      u"GreaterOperator", u"LesserOperator", u"EQUAL", u"BooleanLiteral", 
                      u"TRUE", u"FALSE", u"IntegerLiteral", u"RealLiteral", 
                      u"Identifier", u"LINE_TERMINATOR", u"WHITESPACE", 
                      u"COMMENT", u"LINE_COMMENT" ]

    RULE_stlfile = 0
    RULE_stlSpecification = 1
    RULE_spec = 2
    RULE_modimport = 3
    RULE_assertion = 4
    RULE_declaration = 5
    RULE_annotation = 6
    RULE_annotation_type = 7
    RULE_variableDeclaration = 8
    RULE_assignment = 9
    RULE_domainType = 10
    RULE_ioType = 11
    RULE_interval = 12
    RULE_intervalTime = 13
    RULE_unit = 14
    RULE_topExpression = 15
    RULE_expression = 16
    RULE_real_expression = 17
    RULE_comparisonOp = 18
    RULE_literal = 19
    RULE_identifier = 20

    ruleNames =  [ u"stlfile", u"stlSpecification", u"spec", u"modimport", 
                   u"assertion", u"declaration", u"annotation", u"annotation_type", 
                   u"variableDeclaration", u"assignment", u"domainType", 
                   u"ioType", u"interval", u"intervalTime", u"unit", u"topExpression", 
                   u"expression", u"real_expression", u"comparisonOp", u"literal", 
                   u"identifier" ]

    EOF = Token.EOF
    MINUS=1
    PLUS=2
    TIMES=3
    DIVIDE=4
    LPAREN=5
    RPAREN=6
    LBRACE=7
    RBRACE=8
    LBRACK=9
    RBRACK=10
    SEMICOLON=11
    COLON=12
    COMMA=13
    DOT=14
    AT=15
    ABS=16
    SEC=17
    MSEC=18
    USEC=19
    NSEC=20
    PSEC=21
    ROS_Topic=22
    Import=23
    Input=24
    Output=25
    Internal=26
    Constant=27
    DomainTypeReal=28
    DomainTypeFloat=29
    DomainTypeLong=30
    DomainTypeComplex=31
    DomainTypeInt=32
    DomainTypeBool=33
    Assertion=34
    Specification=35
    From=36
    NotOperator=37
    OrOperator=38
    AndOperator=39
    IffOperator=40
    ImpliesOperator=41
    XorOperator=42
    RiseOperator=43
    FallOperator=44
    AlwaysOperator=45
    EventuallyOperator=46
    UntilOperator=47
    HistoricallyOperator=48
    OnceOperator=49
    SinceOperator=50
    NextOperator=51
    OracleOperator=52
    PreviousOperator=53
    EqualOperator=54
    NotEqualOperator=55
    GreaterOrEqualOperator=56
    LesserOrEqualOperator=57
    GreaterOperator=58
    LesserOperator=59
    EQUAL=60
    BooleanLiteral=61
    TRUE=62
    FALSE=63
    IntegerLiteral=64
    RealLiteral=65
    Identifier=66
    LINE_TERMINATOR=67
    WHITESPACE=68
    COMMENT=69
    LINE_COMMENT=70

    def __init__(self, input):
        super(StlBoundedFutureParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StlfileContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.StlfileContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stlSpecification(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.StlSpecificationContext,0)


        def EOF(self):
            return self.getToken(StlBoundedFutureParser.EOF, 0)

        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_stlfile

        def accept(self, visitor):
            if hasattr(visitor, "visitStlfile"):
                return visitor.visitStlfile(self)
            else:
                return visitor.visitChildren(self)




    def stlfile(self):

        localctx = StlBoundedFutureParser.StlfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stlfile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.stlSpecification()
            self.state = 43
            self.match(StlBoundedFutureParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StlSpecificationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.StlSpecificationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assertion(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.AssertionContext,0)


        def spec(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.SpecContext,0)


        def modimport(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlBoundedFutureParser.ModimportContext)
            else:
                return self.getTypedRuleContext(StlBoundedFutureParser.ModimportContext,i)


        def declaration(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlBoundedFutureParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(StlBoundedFutureParser.DeclarationContext,i)


        def annotation(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlBoundedFutureParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(StlBoundedFutureParser.AnnotationContext,i)


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_stlSpecification

        def accept(self, visitor):
            if hasattr(visitor, "visitStlSpecification"):
                return visitor.visitStlSpecification(self)
            else:
                return visitor.visitChildren(self)




    def stlSpecification(self):

        localctx = StlBoundedFutureParser.StlSpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stlSpecification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            _la = self._input.LA(1)
            if _la==StlBoundedFutureParser.Specification:
                self.state = 45
                self.spec()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==StlBoundedFutureParser.From:
                self.state = 48
                self.modimport()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    token = self._input.LA(1)
                    if token in [StlBoundedFutureParser.Input, StlBoundedFutureParser.Output, StlBoundedFutureParser.Constant, StlBoundedFutureParser.DomainTypeFloat, StlBoundedFutureParser.DomainTypeLong, StlBoundedFutureParser.DomainTypeComplex, StlBoundedFutureParser.DomainTypeInt, StlBoundedFutureParser.Identifier]:
                        self.state = 54
                        self.declaration()

                    elif token in [StlBoundedFutureParser.AT]:
                        self.state = 55
                        self.annotation()

                    else:
                        raise NoViableAltException(self)
             
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 61
            self.assertion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.SpecContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_spec

     
        def copyFrom(self, ctx):
            super(StlBoundedFutureParser.SpecContext, self).copyFrom(ctx)



    class SpecificationContext(SpecContext):

        def __init__(self, parser, ctx): # actually a StlBoundedFutureParser.SpecContext)
            super(StlBoundedFutureParser.SpecificationContext, self).__init__(parser)
            self.copyFrom(ctx)

        def Specification(self):
            return self.getToken(StlBoundedFutureParser.Specification, 0)
        def Identifier(self):
            return self.getToken(StlBoundedFutureParser.Identifier, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitSpecification"):
                return visitor.visitSpecification(self)
            else:
                return visitor.visitChildren(self)



    def spec(self):

        localctx = StlBoundedFutureParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spec)
        try:
            localctx = StlBoundedFutureParser.SpecificationContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(StlBoundedFutureParser.Specification)
            self.state = 64
            self.match(StlBoundedFutureParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModimportContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.ModimportContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_modimport

     
        def copyFrom(self, ctx):
            super(StlBoundedFutureParser.ModimportContext, self).copyFrom(ctx)



    class ModImportContext(ModimportContext):

        def __init__(self, parser, ctx): # actually a StlBoundedFutureParser.ModimportContext)
            super(StlBoundedFutureParser.ModImportContext, self).__init__(parser)
            self.copyFrom(ctx)

        def From(self):
            return self.getToken(StlBoundedFutureParser.From, 0)
        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(StlBoundedFutureParser.Identifier)
            else:
                return self.getToken(StlBoundedFutureParser.Identifier, i)
        def Import(self):
            return self.getToken(StlBoundedFutureParser.Import, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitModImport"):
                return visitor.visitModImport(self)
            else:
                return visitor.visitChildren(self)



    def modimport(self):

        localctx = StlBoundedFutureParser.ModimportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modimport)
        try:
            localctx = StlBoundedFutureParser.ModImportContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(StlBoundedFutureParser.From)
            self.state = 67
            self.match(StlBoundedFutureParser.Identifier)
            self.state = 68
            self.match(StlBoundedFutureParser.Import)
            self.state = 69
            self.match(StlBoundedFutureParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssertionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.AssertionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(StlBoundedFutureParser.Identifier, 0)

        def EQUAL(self):
            return self.getToken(StlBoundedFutureParser.EQUAL, 0)

        def topExpression(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.TopExpressionContext,0)


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_assertion

        def accept(self, visitor):
            if hasattr(visitor, "visitAssertion"):
                return visitor.visitAssertion(self)
            else:
                return visitor.visitChildren(self)




    def assertion(self):

        localctx = StlBoundedFutureParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assertion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(StlBoundedFutureParser.Identifier)
            self.state = 72
            self.match(StlBoundedFutureParser.EQUAL)
            self.state = 73
            self.topExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.DeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_declaration

     
        def copyFrom(self, ctx):
            super(StlBoundedFutureParser.DeclarationContext, self).copyFrom(ctx)



    class DeclVariableContext(DeclarationContext):

        def __init__(self, parser, ctx): # actually a StlBoundedFutureParser.DeclarationContext)
            super(StlBoundedFutureParser.DeclVariableContext, self).__init__(parser)
            self.copyFrom(ctx)

        def variableDeclaration(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.VariableDeclarationContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitDeclVariable"):
                return visitor.visitDeclVariable(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = StlBoundedFutureParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        try:
            localctx = StlBoundedFutureParser.DeclVariableContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.variableDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AnnotationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.AnnotationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def annotation_type(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.Annotation_typeContext,0)


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_annotation

        def accept(self, visitor):
            if hasattr(visitor, "visitAnnotation"):
                return visitor.visitAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def annotation(self):

        localctx = StlBoundedFutureParser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_annotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(StlBoundedFutureParser.AT)
            self.state = 78
            self.annotation_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Annotation_typeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.Annotation_typeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_annotation_type

     
        def copyFrom(self, ctx):
            super(StlBoundedFutureParser.Annotation_typeContext, self).copyFrom(ctx)



    class RosTopicContext(Annotation_typeContext):

        def __init__(self, parser, ctx): # actually a StlBoundedFutureParser.Annotation_typeContext)
            super(StlBoundedFutureParser.RosTopicContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ROS_Topic(self):
            return self.getToken(StlBoundedFutureParser.ROS_Topic, 0)
        def LPAREN(self):
            return self.getToken(StlBoundedFutureParser.LPAREN, 0)
        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(StlBoundedFutureParser.Identifier)
            else:
                return self.getToken(StlBoundedFutureParser.Identifier, i)
        def COMMA(self):
            return self.getToken(StlBoundedFutureParser.COMMA, 0)
        def RPAREN(self):
            return self.getToken(StlBoundedFutureParser.RPAREN, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitRosTopic"):
                return visitor.visitRosTopic(self)
            else:
                return visitor.visitChildren(self)



    def annotation_type(self):

        localctx = StlBoundedFutureParser.Annotation_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_annotation_type)
        try:
            localctx = StlBoundedFutureParser.RosTopicContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(StlBoundedFutureParser.ROS_Topic)
            self.state = 81
            self.match(StlBoundedFutureParser.LPAREN)
            self.state = 82
            self.match(StlBoundedFutureParser.Identifier)
            self.state = 83
            self.match(StlBoundedFutureParser.COMMA)
            self.state = 84
            self.match(StlBoundedFutureParser.Identifier)
            self.state = 85
            self.match(StlBoundedFutureParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.VariableDeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def domainType(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.DomainTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.IdentifierContext,0)


        def Constant(self):
            return self.getToken(StlBoundedFutureParser.Constant, 0)

        def ioType(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.IoTypeContext,0)


        def assignment(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.AssignmentContext,0)


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_variableDeclaration

        def accept(self, visitor):
            if hasattr(visitor, "visitVariableDeclaration"):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = StlBoundedFutureParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if _la==StlBoundedFutureParser.Constant:
                self.state = 87
                self.match(StlBoundedFutureParser.Constant)


            self.state = 91
            _la = self._input.LA(1)
            if _la==StlBoundedFutureParser.Input or _la==StlBoundedFutureParser.Output:
                self.state = 90
                self.ioType()


            self.state = 93
            self.domainType()
            self.state = 94
            self.identifier()
            self.state = 96
            _la = self._input.LA(1)
            if _la==StlBoundedFutureParser.EQUAL:
                self.state = 95
                self.assignment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.AssignmentContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_assignment

     
        def copyFrom(self, ctx):
            super(StlBoundedFutureParser.AssignmentContext, self).copyFrom(ctx)



    class AsgnExprContext(AssignmentContext):

        def __init__(self, parser, ctx): # actually a StlBoundedFutureParser.AssignmentContext)
            super(StlBoundedFutureParser.AsgnExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def EQUAL(self):
            return self.getToken(StlBoundedFutureParser.EQUAL, 0)
        def expression(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.ExpressionContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAsgnExpr"):
                return visitor.visitAsgnExpr(self)
            else:
                return visitor.visitChildren(self)


    class AsgnLiteralContext(AssignmentContext):

        def __init__(self, parser, ctx): # actually a StlBoundedFutureParser.AssignmentContext)
            super(StlBoundedFutureParser.AsgnLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def EQUAL(self):
            return self.getToken(StlBoundedFutureParser.EQUAL, 0)
        def literal(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.LiteralContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAsgnLiteral"):
                return visitor.visitAsgnLiteral(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = StlBoundedFutureParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.state = 102
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = StlBoundedFutureParser.AsgnLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(StlBoundedFutureParser.EQUAL)
                self.state = 99
                self.literal()
                pass

            elif la_ == 2:
                localctx = StlBoundedFutureParser.AsgnExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(StlBoundedFutureParser.EQUAL)
                self.state = 101
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.DomainTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DomainTypeFloat(self):
            return self.getToken(StlBoundedFutureParser.DomainTypeFloat, 0)

        def DomainTypeInt(self):
            return self.getToken(StlBoundedFutureParser.DomainTypeInt, 0)

        def DomainTypeLong(self):
            return self.getToken(StlBoundedFutureParser.DomainTypeLong, 0)

        def DomainTypeComplex(self):
            return self.getToken(StlBoundedFutureParser.DomainTypeComplex, 0)

        def Identifier(self):
            return self.getToken(StlBoundedFutureParser.Identifier, 0)

        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_domainType

        def accept(self, visitor):
            if hasattr(visitor, "visitDomainType"):
                return visitor.visitDomainType(self)
            else:
                return visitor.visitChildren(self)




    def domainType(self):

        localctx = StlBoundedFutureParser.DomainTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_domainType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(((((_la - 29)) & ~0x3f) == 0 and ((1 << (_la - 29)) & ((1 << (StlBoundedFutureParser.DomainTypeFloat - 29)) | (1 << (StlBoundedFutureParser.DomainTypeLong - 29)) | (1 << (StlBoundedFutureParser.DomainTypeComplex - 29)) | (1 << (StlBoundedFutureParser.DomainTypeInt - 29)) | (1 << (StlBoundedFutureParser.Identifier - 29)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IoTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.IoTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Input(self):
            return self.getToken(StlBoundedFutureParser.Input, 0)

        def Output(self):
            return self.getToken(StlBoundedFutureParser.Output, 0)

        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_ioType

        def accept(self, visitor):
            if hasattr(visitor, "visitIoType"):
                return visitor.visitIoType(self)
            else:
                return visitor.visitChildren(self)




    def ioType(self):

        localctx = StlBoundedFutureParser.IoTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ioType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==StlBoundedFutureParser.Input or _la==StlBoundedFutureParser.Output):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntervalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.IntervalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(StlBoundedFutureParser.LBRACK, 0)

        def intervalTime(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(StlBoundedFutureParser.IntervalTimeContext)
            else:
                return self.getTypedRuleContext(StlBoundedFutureParser.IntervalTimeContext,i)


        def COLON(self):
            return self.getToken(StlBoundedFutureParser.COLON, 0)

        def RBRACK(self):
            return self.getToken(StlBoundedFutureParser.RBRACK, 0)

        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_interval

        def accept(self, visitor):
            if hasattr(visitor, "visitInterval"):
                return visitor.visitInterval(self)
            else:
                return visitor.visitChildren(self)




    def interval(self):

        localctx = StlBoundedFutureParser.IntervalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_interval)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(StlBoundedFutureParser.LBRACK)
            self.state = 109
            self.intervalTime()
            self.state = 110
            self.match(StlBoundedFutureParser.COLON)
            self.state = 111
            self.intervalTime()
            self.state = 112
            self.match(StlBoundedFutureParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntervalTimeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(StlBoundedFutureParser.IntervalTimeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StlBoundedFutureParser.RULE_intervalTime

     
        def copyFrom(self, ctx):
            super(StlBoundedFutureParser.IntervalTimeContext, self).copyFrom(ctx)



    class IntervalTimeLiteralContext(IntervalTimeContext):

        def __init__(self, parser, ctx): # actually a StlBoundedFutureParser.IntervalTimeContext)
            super(StlBoundedFutureParser.IntervalTimeLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.LiteralContext,0)

        def unit(self):
            return self.getTypedRuleContext(StlBoundedFutureParser.UnitContext,0)

